# python-monorepo-example

./: .envrc  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .mergify.yml  .percy.yml  .pre-commit-config.yaml  1970-01-01-benchgraph.md  2015-08-20-were-hiring.md  2015-09-08-programming-r-at-native-speed-in-haskell.md  2015-12-09-stack-nix.md  2016-02-25-hello-sparkle.md  2016-06-20-haskell-compute-paas-with-sparkle.md  2016-10-17-inline-java.md  2017-01-01-hyperion.md  2017-03-13-linear-types.md  2017-05-18-hiring-technical-evangelist.md  2017-05-23-typing-nix.md  2017-05-24-typing-nix.md  2017-06-27-streaming-libraries.md  2017-07-10-haskell-r-best-both-worlds.md  2017-07-21-more-linear-types.md  2017-07-27-chak-joins-tweag.md  2017-07-27-streaming-programs.md  2017-08-01-chak-joins-tweag.md  2017-08-03-linear-typestates.md  2017-08-09-array-programming-in-haskell.md  2017-08-10-linear-types-packed-data.md  2017-08-14-inline-java.md  2017-08-14-streaming2.md  2017-08-17-inline-code.md  2017-08-21-inline-java-ghc-plugin.md  2017-08-24-linear-types-packed-data.md  2017-08-31-hmatrix.md  2017-08-31-hyperion.md  2017-09-01-free-monads.md  2017-09-06-hyperion.md  2017-09-14-inline-java-tutorial.md  2017-09-15-inline-java-tutorial.md  (+123 more)
.cache/develop-html/: index.html
.github/: pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: blog_post_idea.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: blog_post.md
.github/workflows/: ci.yml  ci_base.yml  ci_base2.yml  ci_fancy.yml  ci_python_reusable.yml  deploy-workflow.yaml  percy-workflow.yaml  python_reusable.yml  top_level.yml  workflow.yaml
content/articles/: article1.yaml  article2.yaml  article3.yaml  article4.yaml  efficient-compilation-of-algebraic-effect-handlers.yaml  existentials.yaml  graded-dependent.yaml  higher-order-ad.yaml  kind-inference-for-datatypes.yaml  kinds-are-cc.yaml  linear-constraints.yaml  linear-haskell.yaml  linear-smc.yaml  partial-type-constructors.yaml  resolution-as-intersection-subtyping-via-modus-ponens.yaml  stability.yaml  stitch.yaml  tasks-and-workflows.yaml  union-intersection.yaml
content/blog/: 2015-08-20-were-hiring.md  2015-09-08-programming-r-at-native-speed-in-haskell.md  2015-12-09-stack-nix.md  2016-02-25-hello-sparkle.md  2016-06-20-haskell-compute-paas-with-sparkle.md  2016-10-17-inline-java.md  2017-03-13-linear-types.md  2017-05-18-hiring-technical-evangelist.md  2017-05-23-typing-nix.md  2017-07-10-haskell-r-best-both-worlds.md  2017-07-27-streaming-programs.md  2017-08-01-chak-joins-tweag.md  2017-08-03-linear-typestates.md  2017-08-09-array-programming-in-haskell.md  2017-08-17-inline-code.md  2017-08-24-linear-types-packed-data.md  2017-08-31-hmatrix.md  2017-09-06-hyperion.md  2017-09-15-inline-java-tutorial.md  2017-09-22-inline-java-ghc-plugin.md  2017-09-27-array-package.md  2017-10-05-streaming2.md  2017-10-12-vector-package.md  2017-10-19-ghc-devops-group.md  2017-10-27-stackage-head.md  2017-11-01-streaming-and-foldl.md  2017-11-10-nix-on-wsl.md  2017-11-16-repa.md  2017-11-29-linear-jvm.md  2017-12-21-reflection-tutorial.md  2018-02-05-free-monads.md  2018-02-08-internships.md  2018-02-28-bazel-haskell.md  2018-03-08-linear-sort.md  2018-03-15-bazel-nix.md  2018-03-29-we-are-hiring-swe.md  2018-04-17-stackage-head-is-live.md  2018-04-25-funflow.md  2018-05-29-hello-asterius.md  2018-06-21-linear-streams.md  (+150 more)
content/groups/: scalable-builds.md
content/papers/: index.yaml  migrate.js
content/profiles/: Camilla BRIEDJ  Jonathon.Bartlett  adam.hose.yaml  adrian.robert.yaml  alejandro.serranomena.yaml  aleksander.gondek.yaml  alex.shabalin.yaml  alexander.bantyev.yaml  alexander.esgen.yaml  alexandre.prestele.yaml  alexei.drake.yaml  alexis.king.yaml  alois.cochard.yaml  among.us.yaml  amyas.merivale.yaml  andrea.bedini.yaml  andrea.condoluci.yaml  andreas.herrmann.yaml  andrienne.papadopoulou.yaml  anthony.caccia.yaml  arnaud.spiwack.yaml  artur.stachecki.yaml  avi.dessauer.yaml  ben.radford.yaml  benjamin.robin.yaml  bryan.honof.yaml  camilla.briedj.yaml  carl.hammann.yaml  caroline.taupin.yaml  cheng.shao.yaml  christian.georgii.yaml  christian.hoppner.yaml  christopher.harrison.yaml  claudio.bley.yaml  clement.hurlin.yaml  connor.baker.yaml  daniel.baker.yaml  daniel.thagard.yaml  david.dumas.yaml  divesh.otwani.yaml  (+97 more)
just/: private.just  py.just
libs/base/: README.md  pyproject.toml  requirements.txt
libs/base/mycorp/base/: __init__.py  adder2.py
libs/base/tests/: test_base.py  test_example.py
libs/base2/: README.md  pyproject.toml
libs/fancy/: README.md  pyproject.toml  requirements.txt  setup.cfg
metavision-base/: justfile  pyproject.toml  report.xml
metavision-base/python/metavision/base/: __init__.py  base.py
metavision-base/python/tests/: test_metavision_base.py
metavision-extended/: justfile  pyproject.toml  report.xml
metavision-extended/python/metavision/extended/: __init__.py  extended.py
metavision-extended/python/tests/: test_metavision_extended.py
plugins/gatsby-remark-video-tweag/: constants.js  index.js  package.json
reflection-tutorial/: reflection-tutorial.cabal  stack.yaml
reflection-tutorial/src/: Reflection.lhs
scripts/: rebuild-sandbox.sh
src/components/: Arrow.js  Backdrop.js  BlogPostContent.js  CallToActionFooter.js  Divider.js  ListIndustries.js  SectionHeading.js  SectionHeading.tsx  all-tags.js  anti-index.js  blog-card.js  cta.js  footer.css  footer.js  form.js  header.js  index.js  jquery.js  keyindustries.js  layout-fullpage.js  layout.js  layout.scss  navigation.js  navigation.tsx  navitem.js  navlist.js  seo.js  tags.js
src/fonts/: Stratos-Bold.eot  Stratos-Regular.eot  Stratos.css  icomoon.css  icomoon.eot
src/gatsby-plugin-theme-ui/: index.js
src/hooks/: index.js  useAllTags.js
static/: jquery.main.js  privacy.html
templates/pylibrary/: README.md  cookiecutter.json  pyproject.toml
templates/pylibrary/hooks/: post_gen_project.py
templates/pylibrary/tests/: test_template.py
templates/pylibrary/{{cookiecutter.module_name}}/: README.md  pyproject.toml  requirements.txt
(+203 files in other folders)
