[project]
name = "metavision-base"
version = "0.1.0"
requires-python = ">=3.10,<4.0"
dependencies = [
  "numpy"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python/"]
include = ["metavision.base"]

[tool.uv.sources]
