name:                reflection-tutorial
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflection
  build-depends:
                base >= 4.7 && < 5
              , reflection
  default-language:    Haskell2010
